# Playbox

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_3D.md  CODEBASE_MAP.md  Makefile  README.md  docker-compose.dev.yml
backend/: .dockerignore  Dockerfile  alembic.ini  fly.toml  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 20260424_0001_add_api_keys.py  20260424_0002_add_session_corpora.py
backend/app/: __init__.py  auth.py  config.py  errors.py  limits.py  main.py  observability.py  runtime.py
backend/app/answer/: __init__.py  citations.py  generator.py  prompts.py
backend/app/api/: ephemeral.py  live_search.py  router.py
backend/app/connectors/: base.py  registry.py  slack.py  webhook.py
backend/app/db/: __init__.py  session.py
backend/scripts/: build_artifacts_kaggle.py  cleanup_corpora.py  create_api_key.py  download_models.py  export_mrl_onnx.py  run_latency_gate.py  run_retrieval_eval.py  run_vision_eval.py  train_projection.py  write_artifact_manifest.py
backend/services/: __init__.py
backend/tests/: test_artifact_build.py  test_beta_hardening.py  test_corpora_api.py  test_cortical.py  test_ephemeral_api.py  test_eval_dynamic.py  test_eval_harness.py  test_eval_layers.py  test_ghost.py  test_latency_gate.py  test_parsers.py  test_planner.py  test_reranker_remote.py  test_retrieval.py  test_search_service.py  test_source_executor.py  test_span_executor.py  test_waver_core_exports.py
backend/waver_core/: Cargo.toml  README.md  pyproject.toml
backend/waver_ghost/: README.md  __init__.py  proxy.py
(+102 files in other folders)
