[package]
name = "waver_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "waver_core"
crate-type = ["cdylib"]

[dependencies]
aho-corasick = "1.1.3"
ndarray = "0.17"
ort = { version = "2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "api-24"] }
pyo3 = { version = "0.22.6", features = ["extension-module"] }
tantivy = "0.22.0"
tokenizers = "0.22.2"
